fix: update swagger config
